<resources>
    <string name="app_name">rawan</string>
    <string name="lance_bogrol">Lance Bogrol</string>
    <string name="done">Done</string>
    <string name="classified_information">Classified information</string>
    <string name="profile_image">profile image</string>
    <string name="change_your_profile_photo">Change your profile photo</string>
    <string name="female">female</string>
    <string name="_123_4567890">123 4567890</string>
    <string name="name_yourdomain_com">name@yourdomain.com</string>
    <string name="phasellus_fermentum_congue_imperdiet">Phasellus fermentum congue imperdiet</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="lancebogrol">lancebogrol</string>
    <string name="http_yourdomain_com">http://yourdomain.com</string>
    <string name="save">Save</string>
    <string name="_851_9885_0994">+ 851 9885 0994</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="add">+add</string>
    <string name="your_profile">Your Profile</string>
    <string name="add_details">add details</string>
    <string name="_40_completed">40% Completed</string>
    <string name="location">Location</string>
    <string name="dr_sherley">Dr. Sherley</string>
    <string name="abraham">Abraham</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="select">select</string>
    <string name="enter_email">enter email</string>
    <string name="hong_kong_china">Hong Kong, China</string>
    <string name="experience">Experience</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_id">Email ID</string>
    <string name="desc">Image</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>

</resources>
