<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4"
    tools:context=".YourProfile">

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#cdced2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="143dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="#cdced2"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#007aff"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:targetApi="lollipop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <ImageView
            android:contentDescription="@string/desc"
            android:id="@+id/imageView9"
            android:layout_width="115dp"
            android:layout_height="91dp"
            app:srcCompat="@drawable/ic_woman_"
            tools:ignore="MissingConstraints,VectorDrawableCompat"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="35dp"
            tools:srcCompat="@drawable/ic_woman_" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dr_sherley"
            app:layout_constraintBottom_toTopOf="@+id/editText10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:hint="@string/first_name"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/abraham"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/editText9"
            tools:ignore="MissingConstraints"
            android:hint="@string/last_name"
            android:importantForAutofill="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/_851_9885_0994"
                android:inputType="phone"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/select"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date"
                android:importantForAutofill="no" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience" />


            <EditText
                android:id="@+id/editText17"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/add"
                android:inputType="textPostalAddress"
                android:text=""
                android:importantForAutofill="no" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_contact" />

            <EditText
                android:id="@+id/editText16"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/add_details"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

        </TableRow>

        <TableRow
            android:layout_width="423dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <EditText
                android:id="@+id/editText18"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/hong_kong_china"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_back_arrow"
        android:gravity="center"
        android:text="@string/your_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/_40_completed"
        android:textColor="#8c8c8c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#d1d1d6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>