<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tV_classified"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:text="@string/classified_information"
        android:textAllCaps="false"
        android:textColor="#abb1c0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="389dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="189dp"
        android:background="#f53d62"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tV_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/EditProfile"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_icon_white"
            android:gravity="center|center_horizontal"
            android:text="@string/edit_profile"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tV_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <ImageView
            android:contentDescription="@string/desc"
            android:id="@+id/img_profile1"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            tools:srcCompat="@drawable/ic_photo_here_copy" />

        <TextView
            android:id="@+id/tV_change"
            android:layout_width="match_parent"
            android:layout_height="37dp"


            android:gravity="center"
            android:text="@string/change_your_profile_photo"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tV_profile"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:text="@string/profile"
        android:textColor="#abb1c0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/bu_done"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="68dp"
        android:background="#f53d62"
        android:text="@string/done"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_profile">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_profile2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/profile_image"
                app:srcCompat="@drawable/ic_photo_here_copy"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/eT_name"
                android:layout_width="353dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="2"
                android:hint="@string/lance_bogrol"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textSize="12sp"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/img_username"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_icon"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/eT_username"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/lancebogrol"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textSize="14sp"
                android:importantForAutofill="no" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="264dp">

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/img_web"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_icon_web"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/eT_link"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/http_yourdomain_com"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:importantForAutofill="no" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_icon_1"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/phasellus_fermentum_congue_imperdiet"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:importantForAutofill="no" />


        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableClassified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_classified">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/img_email"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/img_status"
                app:layout_constraintEnd_toStartOf="@+id/eT_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tV_classified"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_icon_mess"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/eT_email"
                android:layout_width="355dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="2"
                android:hint="@string/name_yourdomain_com"
                android:inputType="textEmailSubject"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_email"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="500dp"
                android:importantForAutofill="no" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/img_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/img_status"
                app:layout_constraintEnd_toStartOf="@+id/eT_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_email"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@drawable/ic_icon_pho" />

            <EditText
                android:id="@+id/eT_phone"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="2"
                android:hint="@string/_123_4567890"
                android:inputType="phone"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_phone"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="546dp"
                android:importantForAutofill="no" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/img_status"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_phone"
                app:srcCompat="@drawable/ic_icon_s"
                tools:ignore="VectorDrawableCompat" />


            <EditText
                android:id="@+id/eT_status"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/female"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/img_status"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="591dp"
                android:importantForAutofill="no" />


        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>